--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "johnny-five": "^2.1.0",
     "nodemon": "^2.0.21",
     "serialport": "^12.0.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "cloudinary": "^1.36.1"
   }
 }
